--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                 <p>&copy; 2025   All rights reserved.</p>
                 <nav>
                     <ul>
-                        <li><a href="https://www.linkedin.com/in/abdalrahman-gaber">  <img src="in.png" alt="My Profile Picture" width="30"></a></li>
+                        <li><a href="https://www.linkedin.com/in/abdalrahman-gaber-813029339">  <img src="in.png" alt="linkedin" width="30"></a></li>
                         <li><a href="https://github.com/AbdalrahmanGaber">   <img src="git.png" alt="GitHup" width="30"></a></li>
                         <li><a href="https://www.facebook.com/Abdo.Gaber.Salama">   <img src="facebook.png" alt="facebook" width="30"></a></li>
                         <li><a href="https://www.youtube.com">   <img src="youtube.png" alt="youtube" width="30"></a></li>
