--- a/index.html
+++ b/index.html
@@ -39,15 +39,13 @@
         <p>&copy; 2025   All rights reserved.</p>
         <nav>
             <ul>
-                <li><a href="https://www.linkedin.com/in/abdalrahman-gaber-813029339?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">  <img src="in.png" alt="My Profile Picture" width="20"></a></li>
+                <li><a href="https://www.linkedin.com/in/abdalrahman-gaber">  <img src="in.png" alt="My Profile Picture" width="20"></a></li>
                 <li><a href="https://github.com/AbdalrahmanGaber">   <img src="git.png" alt="GitHup" width="20"></a></li>
                 <li><a href="https://www.facebook.com/Abdo.Gaber.Salama">   <img src="facebook.png" alt="facebook" width="20"></a></li>
                 <li><a href="https://www.youtube.com">   <img src="youtube.png" alt="youtube" width="20"></a></li>
                 <li><a href="https://www.Pinterest.com">   <img src="pin.png" alt="Pinterest" width="20"></a></li>
                 <li><a href="https://www.x.com">   <img src="x.png" alt="x" width="20"></a></li>
                 <li><a href="https://www.instgram.com">   <img src="ins.png" alt="instgram" width="20"></a></li>
-
-
             </ul>
         </nav>
     </footer>
