--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                         <li><a href="https://www.linkedin.com/in/abdalrahman-gaber-813029339">  <img src="in.png" alt="linkedin" width="30"></a></li>
                         <li><a href="https://github.com/AbdalrahmanGaber">   <img src="git.png" alt="GitHup" width="30"></a></li>
                         <li><a href="https://www.facebook.com/Abdo.Gaber.Salama">   <img src="facebook.png" alt="facebook" width="30"></a></li>
-                        <li><a href="https://www.youtube.com">   <img src="youtube.png" alt="youtube" width="30"></a></li>
+                        <li><a href="https://www.youtube.com/live/eJNWHKld5E8?si=06513iSfEnceM0vc">   <img src="youtube.png" alt="youtube" width="30"></a></li>
                         <li><a href="https://www.Pinterest.com">   <img src="pin.png" alt="Pinterest" width="30"></a></li>
                         <li><a href="https://www.x.com">   <img src="x.png" alt="x" width="30"></a></li>
                         <li><a href="https://www.instgram.com">   <img src="ins.png" alt="instgram" width="30"></a></li>
